Fixed web dev icon alignment

--- a/style.css
+++ b/style.css
@@ -244,7 +244,8 @@ blockquote svg.svg-inline--fa{
 
 .matrix p{
   text-align: center;
-  margin: 1  1 2rem;
+  padding-bottom: 2rem;
+  margin: -1rem 1 2rem;
 }
 
 /*--- Contact Section--- */
